Java对象内存布局和对象头+Synchronized与锁升级+AQS+ReentrantLock、ReentrantReadWriteLock、StampedLock